[package]
name = "hopper-remote"
version = "0.1.0"
edition = "2021"
authors = ["David Weis <davidmichaelweis@gmail.com>"]
description = "Hopper hexapod robot"
license = "MIT OR APACHE"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/hopper-remote"

[dependencies]
tokio = {version = "1.6", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "process",
]}
gilrs = { version = "0.10", features = ["xinput", "serde-serialize"], default-features = false }
anyhow = { version = "1.0", features = ["backtrace"] }
clap = {version = "4", features = ["derive"]}
thiserror = "1.0"
chrono = {version = "0.4", features = ["serde"]}

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.7.6"

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"
