[package]
authors = ["David Weis <davidmichaelweis@gmail.com>"]
description = "Hopper hexapod robot"
edition = "2021"
license = "MIT OR APACHE"
name = "hopper-remote"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/hopper-remote"
version = "0.1.0"

[features]
default = ["gilrs/wgi"]
xinput = ["gilrs/xinput"]

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4", features = ["derive"]}
gilrs = {version = "0.10", features = ["serde-serialize"], default-features = false}
thiserror = "1.0"
tokio = {version = "1.6", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "process",
]}

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# serialization
schemars = {version = "0.8.12", features = ["chrono"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.7.6"

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"
